# tshell

./: README.md  pyproject.toml
tshell/: ai.py  cli.py
